--- a/M2/M2D2/ESERCITAZIONE/index.html
+++ b/M2/M2D2/ESERCITAZIONE/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="main.js" type="text/javascript" ></script>  
+<script src="W1-P2 2.js" type="text/javascript" ></script>  
   <title>Document</title>
 </head>
 <body>
-    
+    prova
 </body>
 </html>
