lezione 11 11 2022 parti errate da rivedere

--- a/M2/M2D6/index.html
+++ b/M2/M2D6/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script src="main.js" type="text/javascript" ></script>  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M2D6LEZIONE11 11 2022</title>
+    <title>M2D6 LEZIONE11 11 2022</title>
 </head>
 <body>
-    
+    <div id="div1">ciccio</div>
+    <p id="p1">prova 1</p>
+    <p id="p2">prova 2</p>
+    <input type="button" value="Init P1" onclick="initID(`p1)">
+    <input type="button" value="Init P2" onclick="initID(`p2)">
+    <button onclick="changeValue(`changing p1!)">Change p1!</button>
+    <button onclick="changeValue(`changing p2!)">Change p2!</button>
+<button onclick="createDiv()">CREATE A NEW DIV!</button>
+<button onclick="removeDiv()">Delete A NEW DIV!</button>
+
+    <script src="main.js" type="text/javascript" ></script>  
 </body>
 </html>
