--- a/M2/M2D8/UPLOAD SU GITHUB/50ex/50ex.html
+++ b/M2/M2D8/UPLOAD SU GITHUB/50ex/50ex.html
@@ -47,16 +47,16 @@
 
         ESERCIZI SUL DOM
 
-        31) Seleziona l'elemento con id "container" nella pagina
-        32) Seleziona tutti gli elementi di tipo <td> nella pagina
-        33) Usa un ciclo per stampare in console il testo contenuto in ogni elemento <td> nella pagina
-        34) Scrivi una funzione per cambiare il titolo della pagina
-        35) Scrivi una funzione per aggiungere una nuova riga alla tabella nella pagina
-        36) Scrivi una funzione per aggiungere la classe "test" ad ogni riga nella tabella
-        37) Scrivi una funzione per aggiungere uno sfondo rosso a ogni link presente nella pagina
-        38) Mostra in console "Page loaded" quando la pagina ha finito di caricarsi
-        39) Scrivi una funzione per aggiungere nuovi elementi alla lista non ordinata nella pagina
-        40) Scrivi una funzione per svuotare una lista nella pagina
+        31) Seleziona l'elemento con id "container" nella pagina fatto
+        32) Seleziona tutti gli elementi di tipo <td> nella pagina fatto
+        33) Usa un ciclo per stampare in console il testo contenuto in ogni elemento <td> nella pagina fatto
+        34) Scrivi una funzione per cambiare il titolo della pagina fatto
+        35) Scrivi una funzione per aggiungere una nuova riga alla tabella nella pagina fatto
+        36) Scrivi una funzione per aggiungere la classe "test" ad ogni riga nella tabella fatto
+        37) Scrivi una funzione per aggiungere uno sfondo rosso a ogni link presente nella pagina fatto
+        38) Mostra in console "Page loaded" quando la pagina ha finito di caricarsi fatto
+        39) Scrivi una funzione per aggiungere nuovi elementi alla lista non ordinata nella pagina fatto
+        40) Scrivi una funzione per svuotare una lista nella pagina fatto
 
         ESERCIZI EXTRA
 
@@ -78,7 +78,7 @@
 </head>
 
 <body cz-shortcut-listen="true">
-  <h1>La mia mattinata per M2</h1>
+  <h1 id="container">La mia mattinata per M2</h1>
   <ol>
     <li>Svegliarsi</li>
     <li>Fare colazione</li>
