--- a/M2/M2D8/UPLOAD SU GITHUB/50ex/50ex.html
+++ b/M2/M2D8/UPLOAD SU GITHUB/50ex/50ex.html
@@ -39,8 +39,8 @@
         24) Crea un array contenente 10 stringhe fatto
         25) Mostra in console ogni stringa del precedente array FATTO
       
-        26) Crea un array contenente 100 numeri random
-        27) Scrivi una funzione per trovare il valore massimo e il valore minimo dall'array appena creato
+        26) Crea un array contenente 100 numeri random fatto
+        27) Scrivi una funzione per trovare il valore massimo e il valore minimo dall'array appena creato fatto
         28) Crea un array di array, nel quale ogni array "figlio" ha 10 numeri random
         29) Crea una funzione che riceve 2 array come parametri e ritorni quello con più elementi
         30) Crea una funzione che riceve 2 array numerici come parametri e ritorna quello con la somma totale degli elementi maggiore
@@ -61,8 +61,8 @@
         ESERCIZI EXTRA
 
         41) Aggiungi un event listener in modo che compaia un alert quando il cursore passa sopra un link; l'alert deve mostrare la sua proprietà href
-        42) Crea un bottone che una volta cliccato nasconde ogni immagine nella pagina
-        43) Crea un bottone che una volta cliccato nasconde o mostra la tabella nella pagina
+        42) Crea un bottone che una volta cliccato nasconde ogni immagine nella pagina FATTO
+        43) Crea un bottone che una volta cliccato nasconde o mostra la tabella nella pagina FATTO
         44) Crea una funzione per calcolare la somma di ogni numero contenuto in tutte le celle della tabella (se il contenuto è un numero)
         45) Cancella l'ultima lettera dal titolo della pagina ogni volta che l'utente ci clicca sopra
         46) Aggiungi un event listener in modo che cliccando un <td> nella pagina, questo cambi colore di sfondo
@@ -89,40 +89,39 @@
 
   <table class="tabm2">
     <tr>
-      <td>Colonna 1</td>
-      <td>Colonna 2</td>
-      <td>Colonna 3</td>
-      <td>Colonna 4</td>
-      <td>Colonna 5</td>
+      <td>Nome</td>
+      <td>Foto</td>
+      <td>Attività</td>
+      <td>Descrizione</td>
+      <td>Info Extra</td>
     </tr>
     <tr>
-      <td>Dato 1,1</td>
+      <td>A1</td>
       <td><img src="assets/svegliarsi.jpeg" alt="svegliarsi"><a href="https://it.wiktionary.org/wiki/svegliarsi">SVEGLIARSI</a></td>
-      <td colspan="2">CELLA UNITA 1</td>
-      <td>CELLA UNITA 2</td>
-      <td>Dato 1,2</td>
+      <td colspan="2">A3 + A4</td>
+      <td>A5</td>
     </tr>
     <tr>
-      <td>Dato 1,1</td>
+      <td>B1</td>
       <td><img src="assets/lavaredenti.jpeg" alt="lavaredenti"><a href="https://it.wiktionary.org/wiki/denti">LAVARE I DENTI</a></td>
-      <td>Dato 1,2</td>
-      <td>Dato 1,2</td>
-      <td>Dato 1,2</td>
+      <td>B3</td>
+      <td>B4</td>
+      <td>B5</td>
     </tr>
     <tr>
-      <td>Dato 1,1</td>
+      <td>C1</td>
       <td><img src="assets/andare a lavoro.png" alt="andarealavoro"><a href="https://it.wiktionary.org/wiki/lavoro#Sostantivo">LAVORARE</a></td>
-      <td>Dato 1,2</td>
-      <td>Dato 1,2</td>
-      <td>Dato 1,2</td>
+      <td>C3</td>
+      <td>C4</td>
+      <td>C5</td>
     </tr>
     <tr>
-      <td>Dato 1,1</td>
+      <td>D1</td>
       <td><img src="assets/pranzare.jpeg" alt="pranzare">
         <a href="https://it.wiktionary.org/wiki/Appendice:Coniugazioni/Italiano/pranzare">PRANZARE</a></td>
-      <td>Dato 1,2</td>
-      <td>Dato 1,2</td>
-      <td>Dato 1,2</td>
+      <td>D3</td>
+      <td>D4</td>
+      <td>D5</td>
     </tr>
 
   </table>
