--- a/M2/M2D8/UPLOAD SU GITHUB/Quizzettone/quiz.html
+++ b/M2/M2D8/UPLOAD SU GITHUB/Quizzettone/quiz.html
@@ -11,7 +11,7 @@
 <!-- domanda --> QUESTION:
 </section>
 <section id="answers">
-<button id="butt">ANSWER A</button> <button>ANSWER B</button>
+<button class="butt">ANSWER A</button> <button>ANSWER B</button>
 
 </section>
 <section id="score">1</section>
