--- a/M3/M3D3/APPUNTI/index.html
+++ b/M3/M3D3/APPUNTI/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+<div class="items">1</div>
+<div class="items">2</div>
+<div class="items">3</div>
+
+
+
+
+    </div>
 </body>
 </html>
