--- a/M3/M3D3/UPLOAD SU GITHUB/W2-P1-Esercizi-Bootstrap.html
+++ b/M3/M3D3/UPLOAD SU GITHUB/W2-P1-Esercizi-Bootstrap.html
@@ -40,18 +40,18 @@ Il gruppo / artista / dj dell'album
 Il genere dell'album
 La durata dell'album
 
-NB: Assicurati di applicare le stesse regole di stile a tutti i componenti album che userai nella pagina per mantenere la coerenza degli elementi e degli stili.
+NB: Assicurati di applicare le stesse regole di stile a tutti i componenti album che userai nella pagina per mantenere la coerenza degli elementi e degli stili. FATTO
 
 
 
-2)  Implementa una navigation bar usando il componente boostrap apposito.
+2)  Implementa una navigation bar usando il componente boostrap apposito. 
 
-     Questa navigazione dovrà linkare ogni sezione nella tua pagina.
+     Questa navigazione dovrà linkare ogni sezione nella tua pagina. FATTO
 
 
 3) Crea una sezione responsive per i tuoi album preferiti.
 
-     In questa sezione dovrai avere:
+     In questa sezione dovrai avere: FATTO!
 
 4 album per linea quando lo schermo è molto grande
 3 album per linea quando lo schermo ha una dimensione intermedia (tablet o simili)
@@ -67,9 +67,9 @@ Band
 Durata
 Genere
 Tracce dell'album ( in una tabella. Trovala tra i componenti Bootstrap ) 
-... e qualsiasi cosa ti venga in mente di interessante che lo riguardi!
+... e qualsiasi cosa ti venga in mente di interessante che lo riguardi! FATTO!
 
-5) La lista dei peggiori album mai sentiti! Seleziona gli album che davvero non sopporti o qualcosa che pensi sia sopravvalutato e inseriscilo nella "hall of shame" in forma di tabella!
+5) La lista dei peggiori album mai sentiti! Seleziona gli album che davvero non sopporti o qualcosa che pensi sia sopravvalutato e inseriscilo nella "hall of shame" in forma di tabella! FATTO
 
 
 6) Tutte copertine! Tappezza una sezione di copertine di album. Solo immagini in un layout a griglia senza spazi fra di loro, con le immagini alla stessa altezza. Inserisci almeno 20 immagini per avere un bell'effetto.
