--- a/M3/M3D4/UPLOAD SU GITHUB/W2-P2-Travel-Agency.html
+++ b/M3/M3D4/UPLOAD SU GITHUB/W2-P2-Travel-Agency.html
@@ -17,11 +17,11 @@ Usa container > row > col in questo ordine per ottenere un layout responsive per
 
 EXERCISES:
 
-1) Implementa una navbar. Collega ogni sezione della pagina agli elementi del menu. 
+1) Implementa una navbar. Collega ogni sezione della pagina agli elementi del menu. FATTO
 
-2) Aggiungi un logo alla navbar, una qualsiasi immagine.
+2) Aggiungi un logo alla navbar, una qualsiasi immagine. FATTO
 
-3) Aggiungi una sezione Jumbotron con il nome e il payoff dell'agenzia.
+3) Aggiungi una sezione Jumbotron con il nome e il payoff dell'agenzia. FATTO
 
 4) Implementa la sezione "Offerta della settimana". Qui mostrerai 4 destinazioni.
 
@@ -29,7 +29,7 @@ In questa sezione dovranno esserci:
 
 4 card per destinazioni per linea a schermo grande
 3 card per destinazioni per linea a schermo medio (tablet)
-2 card per destinazioni per linea a schermo piccolo (mobile)
+2 card per destinazioni per linea a schermo piccolo (mobile) FATTO
 
 5) Implementa la sezione "Welcome Summer". Qui mostrerai 6 destinazioni al tuo utente.
 
@@ -37,7 +37,7 @@ In questa sezione dovranno esserci:
 
 6 card per destinazioni per linea a schermo grande
 3 card per destinazioni per linea a schermo medio (tablet)
-2 card per destinazioni per linea a schermo piccolo (mobile)
+2 card per destinazioni per linea a schermo piccolo (mobile) FATTO.
 
 6) Implementa la sezione "Offerta del giorno". Qui avrai:
 
