--- a/M3/M3D3/UPLOAD SU GITHUB/W2-P1-Esercizi-Bootstrap.html
+++ b/M3/M3D3/UPLOAD SU GITHUB/W2-P1-Esercizi-Bootstrap.html
@@ -72,7 +72,7 @@ Tracce dell'album ( in una tabella. Trovala tra i componenti Bootstrap )
 5) La lista dei peggiori album mai sentiti! Seleziona gli album che davvero non sopporti o qualcosa che pensi sia sopravvalutato e inseriscilo nella "hall of shame" in forma di tabella! FATTO
 
 
-6) Tutte copertine! Tappezza una sezione di copertine di album. Solo immagini in un layout a griglia senza spazi fra di loro, con le immagini alla stessa altezza. Inserisci almeno 20 immagini per avere un bell'effetto.
+6) Tutte copertine! Tappezza una sezione di copertine di album. Solo immagini in un layout a griglia senza spazi fra di loro, con le immagini alla stessa altezza. Inserisci almeno 20 immagini per avere un bell'effetto. FATTO
 
 
 EXTRA) Aggiungi un bottone ad ogni sezione, cliccandolo il corpo della sezione dovrà apparire (se nascosto) o nascondersi (se visibile).
