--- a/M3/M3D3/UPLOAD SU GITHUB/W2-P1-Esercizi-Bootstrap.html
+++ b/M3/M3D3/UPLOAD SU GITHUB/W2-P1-Esercizi-Bootstrap.html
@@ -75,7 +75,7 @@ Tracce dell'album ( in una tabella. Trovala tra i componenti Bootstrap )
 6) Tutte copertine! Tappezza una sezione di copertine di album. Solo immagini in un layout a griglia senza spazi fra di loro, con le immagini alla stessa altezza. Inserisci almeno 20 immagini per avere un bell'effetto. FATTO
 
 
-EXTRA) Aggiungi un bottone ad ogni sezione, cliccandolo il corpo della sezione dovrà apparire (se nascosto) o nascondersi (se visibile).
+EXTRA) Aggiungi un bottone ad ogni sezione, cliccandolo il corpo della sezione dovrà apparire (se nascosto) o nascondersi (se visibile). fatto
 
 SUGGERIMENTO: vedi se esiste un componente Bootstrap che faccia al caso tuo. Se non dovessi trovarlo puoi sempre raggiungere lo stesso effetto usando la normale manipolazione del DOM 
 
