--- a/M3/M3D4/UPLOAD SU GITHUB/W2-P2-Travel-Agency.html
+++ b/M3/M3D4/UPLOAD SU GITHUB/W2-P2-Travel-Agency.html
@@ -42,11 +42,11 @@ In questa sezione dovranno esserci:
 6) Implementa la sezione "Offerta del giorno". Qui avrai:
 
 66% dello spazio dedicato all'immagine del luogo di destinazione
-33% dedicato al nome, date, prezzo e breve descrizione del luogo
+33% dedicato al nome, date, prezzo e breve descrizione del luogo FATTO
 
-7) Rendi invisibile la sezione "Offerta del giorno" su schermi mobile.
+7) Rendi invisibile la sezione "Offerta del giorno" su schermi mobile. fatto
 
-8) Aggiungi nella sezione "Welcome Summer" un'ombra grande ad ogni card.
+8) Aggiungi nella sezione "Welcome Summer" un'ombra grande ad ogni card. fatto
 
 9) Crea una sezione "Last Minute", in cui mostrerai le immagini delle destinazioni last minute sotto forma di card.
 
