--- a/M3/M3D4/UPLOAD SU GITHUB/W2-P2-Travel-Agency.html
+++ b/M3/M3D4/UPLOAD SU GITHUB/W2-P2-Travel-Agency.html
@@ -48,17 +48,17 @@ In questa sezione dovranno esserci:
 
 8) Aggiungi nella sezione "Welcome Summer" un'ombra grande ad ogni card. fatto
 
-9) Crea una sezione "Last Minute", in cui mostrerai le immagini delle destinazioni last minute sotto forma di card.
+9) Crea una sezione "Last Minute", in cui mostrerai le immagini delle destinazioni last minute sotto forma di card. FATTO
 
-10) Crea una sezione "Testimonial", dove l'utente potrà trovare alcuni feedback da utenti fittizi.
+10) Crea una sezione "Testimonial", dove l'utente potrà trovare alcuni feedback da utenti fittizi. fatto
 
-11) Crea un footer con le informazioni dell'agenzia e un bottone "Contattaci".
+11) Crea un footer con le informazioni dell'agenzia e un bottone "Contattaci". FATTO
 
 
 
 EXTRAS
 
-12) Crea un bottone vicino ad ogni sezione per collassarla e riaprirla se premuto.
+12) Crea un bottone vicino ad ogni sezione per collassarla e riaprirla se premuto. fatto
 
 13) Crea la possibilità di contare il numero di "viaggi" presenti sulla pagina.
 
