--- a/M3/M3D4/UPLOAD SU GITHUB/W2-P2-Travel-Agency.html
+++ b/M3/M3D4/UPLOAD SU GITHUB/W2-P2-Travel-Agency.html
@@ -60,11 +60,11 @@ EXTRAS
 
 12) Crea un bottone vicino ad ogni sezione per collassarla e riaprirla se premuto. fatto
 
-13) Crea la possibilità di contare il numero di "viaggi" presenti sulla pagina.
+13) Crea la possibilità di contare il numero di "viaggi" presenti sulla pagina. FATTO
 
-14) Crea un modale con un messaggio e un campo email.
+14) Crea un modale con un messaggio e un campo email. fatto
 
-15) Quando l'utente cliccherà su "Contattaci", fai in modo che il modale venga visualizzato.
+15) Quando l'utente cliccherà su "Contattaci", fai in modo che il modale venga visualizzato. fatto
 
 16) Crea una funzione che aggiunga un badge con la scritta "HOT" su ognuna delle offerte "Welcome Summer".
 
