--- a/M4/M4D2/UPLOAD SU GITHUB/Template Spotify/index.html
+++ b/M4/M4D2/UPLOAD SU GITHUB/Template Spotify/index.html
@@ -21,6 +21,7 @@ Assicurati che l’API venga chiamato durante il caricamento della pagina.
 
 – Aggiungi un pulsante “Tutti gli album”. Quando premuto, dovrebbe mostrare in un modal tutti i titoli degli album presenti sulla pagina.
 – Aggiungi un pulsante “conta unici”. Quando premuto, stampa a console il numero di album UNICI nella pagina. -->
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8" />
@@ -88,6 +89,7 @@ Assicurati che l’API venga chiamato durante il caricamento della pagina.
       <!--END SIDEBAR VERTICAL-->
 
       <!--MAIN-->
+
       <div class="col-12 mb-5 col-md-9 offset-md-3 mainPage">
         <div class="row">
           <div class="col-9 col-lg-11 mainLinks d-none d-md-flex">
@@ -142,9 +144,27 @@ Assicurati che l’API venga chiamato durante il caricamento della pagina.
             </div>
           </div>
         </div>
+        <div class="row">
+            <div class="container main-card-container d-flex justify-content-around flex-wrap " id="cardContainer">
+
+            </div>
+        </div>
+        <div class="row">
+          <div class="container main-card-container d-flex justify-content-around flex-wrap " id="cardManeskin">
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="container main-card-container d-flex justify-content-around flex-wrap " id="cardMamhood">
+
+          </div>
+        </div>
       </div>
+
     </div>
+
   </div>
+
   <!--END MAIN-->
 
   <!--NAVBAR FLEX-BOTTOM-->
@@ -184,16 +204,16 @@ Assicurati che l’API venga chiamato durante il caricamento della pagina.
     </div>
   </div>
   <!--END NAVBAR BOTTOM-->
-
+  <script src="./main.js" type="module"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-  </script>
+    </script>
 
   <script>
   </script>
