--- a/M4/M4D2/UPLOAD SU GITHUB/Template Spotify/index.html
+++ b/M4/M4D2/UPLOAD SU GITHUB/Template Spotify/index.html
@@ -19,8 +19,8 @@ L’obbiettivo dell’esercizio è di ottenere i dati dall’API menzionato sott
 
 Assicurati che l’API venga chiamato durante il caricamento della pagina.
 
-– Aggiungi un pulsante “Tutti gli album”. Quando premuto, dovrebbe mostrare in un modal tutti i titoli degli album presenti sulla pagina.
-– Aggiungi un pulsante “conta unici”. FATTO!
+– Aggiungi un pulsante “Tutti gli album”. Quando premuto, dovrebbe mostrare in un modal tutti i titoli degli album presenti sulla pagina. FATTO
+– Aggiungi un pulsante “conta unici”.!
 
 Quando premuto, stampa a console il numero di album UNICI nella pagina. -->
 
@@ -84,6 +84,8 @@ Quando premuto, stampa a console il numero di album UNICI nella pagina. -->
           <div class="nav-btn">
             <button class="btn signup-btn" type="button">Sign Up</button>
             <button class="btn login-btn" type="button">Login</button>
+            <button class="btn signup-btn" type="button" id="unique">Conta Album Unici</button>
+
             <a href="#">Cookie Policy</a> |
             <a href="#"> Privacy</a>
           </div>
