--- a/M4/M4D3/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D3/UPLOAD SU GITHUB/index.html
@@ -132,55 +132,11 @@ DOCUMENTAZIONE: `[https://www.pexels.com/api/documentation/?language=javascript#
       </div>
     </section>
 
-    <div class="album py-5 bg-light">
-      <div class="container">
+    <div class="container">
 
-        <div class="row">
-          <div class="col-md-4">
-            <!-- <div class="card mb-4 shadow-sm" id="cardContainer">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" src=""
-                preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                  dy=".3em">Thumbnail</text>
-              </svg>
-              <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
-                </div>
-              </div>
-            </div>
-          </div> -->
-          <div class="col-md-4">
-            <div class="card mb-4 shadow-sm" id="cardContainer">
-              <img class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-                <rect width="100%" height="100%" fill="#55595c"></rect>
-            </img>
-              <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div id="pexContainer" style="width: 18rem;">
+
       </div>
-    </div>
-    </div>
-    </div>
 
   </main>
 
@@ -194,8 +150,8 @@ DOCUMENTAZIONE: `[https://www.pexels.com/api/documentation/?language=javascript#
           href="/docs/4.3/getting-started/introduction/">getting started guide</a>.</p>
     </div>
   </footer>
-  <!-- <script src="main.js"></script> -->
-  <script src="./main2.js"></script>
+  <script src="main.js"></script>
+  <!-- <script src="./main2.js"></script> -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
