--- a/M4/M4D3/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D3/UPLOAD SU GITHUB/index.html
@@ -132,12 +132,17 @@ DOCUMENTAZIONE: `[https://www.pexels.com/api/documentation/?language=javascript#
       </div>
     </section>
 
-    <div class="container">
+    <div class="container" id="pexContainer" style="width: 18rem;">
 
-      <div id="pexContainer" style="width: 18rem;">
 
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="btn-group">
+          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+          <button type="button" id="btnClose" class="btn btn-sm btn-outline-secondary">Nascondi</button>
+        </div>
+        <small class="text-muted" id="photoId"></small>
       </div>
-
+    </div>
   </main>
 
   <footer class="text-muted">
