--- a/M4/M4D4/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D4/UPLOAD SU GITHUB/index.html
@@ -49,7 +49,7 @@ Per raggiungere questo risultato, segui queste istruzioni:
 3. Crea una pagine prodotto: quando l’utente clicca sul libro, deve essere portato ad un’altra pagine. Passa l’ASIN del libro come query nell’URL
 4. Nella pagina prodotto, mostra i dettagli del libro con l’ASIN corrispondente usando questo endpoint: `https://striveschool-api.herokuapp.com/books/IL TUO ASIN QUI` -->
 
-<div class="card" style="width: 18rem;">
+<div class="card" id="card" style="width: 18rem;">
     <img src="..." class="card-img-top" alt="..." id="imgs">
     <div class="card-body">
       <h5 class="card-title" id="title">Card title</h5>
