--- a/M4/M4D3/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D3/UPLOAD SU GITHUB/index.html
@@ -120,10 +120,11 @@ DOCUMENTAZIONE: `[https://www.pexels.com/api/documentation/?language=javascript#
 <main role="main">
 
 <section class="jumbotron text-center">
-<div class="container">
-  <h1 class="jumbotron-heading">Album example</h1>
-  <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-  <p>
+<div class="container" id="card">
+  <!-- <img src="" alt="" class="card-img-top" id="images">
+  <h1 class="jumbotron-heading" id="titles">Album example</h1>
+  <p class="lead text-muted" id="authors">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+  <p> -->
     <button id="loadBTN" class="btn btn-primary my-2">Load Images</button>
     <button id="loadSecondaryBTN" class="btn btn-secondary my-2">Load Secondary Images</button>
   </p>
