--- a/M4/M4D4/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D4/UPLOAD SU GITHUB/index.html
@@ -48,17 +48,19 @@ Per raggiungere questo risultato, segui queste istruzioni:
 2. Aggiungi un pulsante per svuotare il carrello
 3. Crea una pagine prodotto: quando l’utente clicca sul libro, deve essere portato ad un’altra pagine. Passa l’ASIN del libro come query nell’URL
 4. Nella pagina prodotto, mostra i dettagli del libro con l’ASIN corrispondente usando questo endpoint: `https://striveschool-api.herokuapp.com/books/IL TUO ASIN QUI` -->
-
-<div class="card" id="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="..." id="imgs">
+<div class="container flex-row" id="contenitore">
+  <!-- <div class="card" id="card" style="width: 18rem;">
+    <img src="..." class="card-img-top " alt="..." id="imgs">
     <div class="card-body">
       <h5 class="card-title" id="title">Card title</h5>
       <p class="card-text" id="price">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn btn-primary">Aggiungi al Carrello</a>
-      <a href="#" class="btn btn-primary">Salta</a>
+      <a href="#" class="btn btn-primary">Salta</a> -->
 
     </div>
   </div>
+
+</div>
 
 
 <script src="main.js"></script>
