--- a/M4/M4D4/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D4/UPLOAD SU GITHUB/index.html
@@ -23,16 +23,16 @@ Sei incaricato di creare la funzione di carrello per un marketplace online.
 
 Usa tutti i nuovi tools e features che hai imparato per creare un’applicazione con i seguenti requisiti:
 
-– Una homepage che mostri tutti i libri con delle card di bootstrap
-– Le card dovrebbero avere un pulsante per aggiungere al carrello e uno per “saltare” un prodotto
+– Una homepage che mostri tutti i libri con delle card di bootstrap fatto
+– Le card dovrebbero avere un pulsante per aggiungere al carrello e uno per “saltare” un prodotto fatto
 – Una sezione per il carrello
 – Un input di testo per cercare i libri
 
 Per raggiungere questo risultato, segui queste istruzioni:
 
 – Usa questo API per ottenere la lista di libri: `https://striveschool-api.herokuapp.com/books`
-– Renderizza tutti i libri usando i template literars and .forEach o .map
-– Aggiungi il pulsante “aggiungi al carrello” a tutte le card
+– Renderizza tutti i libri usando i template literars and .forEach o .map fatto
+– Aggiungi il pulsante “aggiungi al carrello” a tutte le card fatto
 – Quando il pulsante viene cliccato…
 1. Aggiungi il libro alla lista del carrello
 2. cambia lo stile della card per mostrare che è già stata aggiunta (un bordo colorato o un badge vanno bene)
@@ -48,7 +48,29 @@ Per raggiungere questo risultato, segui queste istruzioni:
 2. Aggiungi un pulsante per svuotare il carrello
 3. Crea una pagine prodotto: quando l’utente clicca sul libro, deve essere portato ad un’altra pagine. Passa l’ASIN del libro come query nell’URL
 4. Nella pagina prodotto, mostra i dettagli del libro con l’ASIN corrispondente usando questo endpoint: `https://striveschool-api.herokuapp.com/books/IL TUO ASIN QUI` -->
-<div class="container flex-row" id="contenitore">
+
+<div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav d-flex justify-content-between">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#cart">Cart</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container d-flex flex-wrap" id="contenitore">
+
+</div>
+
+
   <!-- <div class="card" id="card" style="width: 18rem;">
     <img src="..." class="card-img-top " alt="..." id="imgs">
     <div class="card-body">
@@ -61,9 +83,14 @@ Per raggiungere questo risultato, segui queste istruzioni:
   </div>
 
 </div>
+<div id="cart">
 
+
+</div>
 
 <script src="main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
